・Questionモデルの作成、日本語環境整備、テストデータ作成 ・サーバタイム、データベース書き込み時間を東京時間(+9H)になるように設定、Heroku上でも実験済

--- a/src/config/locales/devise.views.ja.yml
+++ b/src/config/locales/devise.views.ja.yml
@@ -7,8 +7,16 @@ ja:
         password: "パスワード"
         password_confirmation: "確認用パスワード"
         remember_me: "ログインを記憶"
+      question:
+        chengyu_jianti: "簡体字"
+        chengyu_fanti: "繁体字"
+        pinyin: "ピンイン"
+        mean: "意味"
+        source: "出典元"
+        level: "レベル"
     models:
       user: "ユーザ"
+      question: "問題"
   devise:
     confirmations:
       new:
