・デバッグできるようにgem debug導入 ・仮の問題出力画面作成、出題ロジック作成 ・簡体字、繁体字の出力切り替え作成 ・Questionモデルに「別解」用カラムを追加

--- a/src/config/locales/devise.views.ja.yml
+++ b/src/config/locales/devise.views.ja.yml
@@ -12,6 +12,9 @@ ja:
         chengyu_fanti: "繁体字"
         pinyin: "ピンイン"
         mean: "意味"
+        other_answer_jianti: "別解：簡体字"
+        other_answer_fanti: "別解：繁体字"
+        other_answer_pinyin: "別解：ピンイン"
         source: "出典元"
         level: "レベル"
     models:
