--- a/src/config/locales/ja.yml
+++ b/src/config/locales/ja.yml
@@ -18,6 +18,7 @@ ja:
         chengyu_fanti: "繁体字"
         pinyin: "ピンイン"
         mean: "意味"
+        note: "備考"
         other_answer_jianti: "別解：簡体字"
         other_answer_fanti: "別解：繁体字"
         other_answer_pinyin: "別解：ピンイン"
