--- a/src/config/locales/devise.ja.yml
+++ b/src/config/locales/devise.ja.yml
@@ -107,7 +107,7 @@ ja:
       new:
         sign_up: アカウント登録
         password_reinput: パスワードを再度入力してください 
-      signed_up: アカウント登録が完了しました。
+      signed_up: アカウント登録が完了しました。登録されたメールアドレスにメールをお送りしていますので、ご確認ください。
       signed_up_but_inactive: ログインするためには、アカウントを有効化してください。
       signed_up_but_locked: アカウントがロックされているためログインできません。
       signed_up_but_unconfirmed: 本人確認用のメールを送信しました。メール内のリンクからアカウントを有効化させてください。
