正答率の低い問題から出題するシステムを作成

--- a/src/config/locales/ja.yml
+++ b/src/config/locales/ja.yml
@@ -64,6 +64,7 @@ ja:
         default: 'デフォルト'
         mistake: '誤答から'
         favorite: 'favから'
+        rate_low: '低正答率から'
       bookmark_flg:
         favorite: 'お気に入り'
         known: '既知'
