--- a/src/config/locales/devise.ja.yml
+++ b/src/config/locales/devise.ja.yml
@@ -83,9 +83,9 @@ ja:
         new_password: 新しいパスワード
       new:
         forgot_your_password: パスワードを忘れた場合
-        send_me_reset_password_instructions: パスワードの再設定方法を送信する
+        send_me_reset_password_instructions: パスワード再設定のためにメールを送信する
       no_token: このページにはアクセスできません。パスワード再設定メールのリンクからアクセスされた場合には、URL をご確認ください。
-      send_instructions: パスワードの再設定について数分以内にメールでご連絡いたします。
+      send_instructions: パスワードの再設定について、数分以内にメールを送信いたします(すぐには来ませんのでしばらくお待ち下さい)。
       send_paranoid_instructions: メールアドレスが登録済みの場合、パスワード再設定用のメールが数分以内に送信されます。
       updated: パスワードが正しく変更されました。
       updated_not_active: パスワードが正しく変更されました。
